# test_jupyter_ai_tools

./: pyproject.toml
src/test_jupyter_ai_tools/: tools.py  toolset.py
src/test_jupyter_ai_tools/eval/: eval_cli.py  eval_suite.py  load_agent.py  tests.json
tests/: test_notebook.ipynb  tests.json
